--- a/app/src/main/res/layout/activity_book_apointment.xml
+++ b/app/src/main/res/layout/activity_book_apointment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".RegistrationActivity">
+    tools:context=".BookApointmentActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="560dp"
-        android:text="Register"
+        android:text="Book Apointment"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,8 +38,8 @@
 
     <EditText
         android:id="@+id/editTextAppFullName"
-        android:layout_width="342dp"
-        android:layout_height="48dp"
+        android:layout_width="344dp"
+        android:layout_height="63dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_person_24"
@@ -54,22 +54,23 @@
         android:scaleType="center"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="@+id/editTextRegUsername"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextRegUsername"
+        app:layout_constraintBottom_toTopOf="@+id/editTextAppAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editTextAppAddress"
         android:layout_width="342dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="295dp"
+        android:layout_marginBottom="183dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
+        android:hint="Address"
+        android:inputType="text"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
@@ -77,22 +78,23 @@
         android:scaleType="center"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="@+id/editTextAppNumber"
+        app:layout_constraintBottom_toTopOf="@+id/buttonBookAppointment"
+        app:layout_constraintEnd_toEndOf="@+id/editTextAppFullName"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextAppNumber"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername" />
+        app:layout_constraintStart_toStartOf="@+id/editTextAppFullName"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextAppNumber"
-        android:layout_width="342dp"
-        android:layout_height="48dp"
+        android:layout_width="338dp"
+        android:layout_height="58dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
+        android:hint="Contact Number"
+        android:inputType="phone"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
@@ -106,15 +108,15 @@
 
     <EditText
         android:id="@+id/editTextAppFees"
-        android:layout_width="342dp"
-        android:layout_height="48dp"
+        android:layout_width="338dp"
+        android:layout_height="59dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="48dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="Fees"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -124,54 +126,37 @@
         android:textColorHint="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/buttonBookAppointment"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAppNumber"
-        app:layout_constraintVertical_bias="0.61" />
-
-    <EditText
-        android:id="@+id/editTextRegUsername"
-        android:layout_width="342dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="text"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:scaleType="center"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="@+id/editTextAppAddress"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextAppAddress"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonBookAppointment"
-        android:layout_width="153dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="159dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="6dp"
         android:background="@drawable/btn_bg"
         android:text="Register"
-        app:layout_constraintBottom_toTopOf="@+id/textViewExistingUser"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAppBack"
         app:layout_constraintEnd_toEndOf="@+id/editTextAppNumber"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="@+id/editTextAppNumber" />
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="@+id/editTextAppNumber"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAppAddress" />
 
-    <TextView
-        android:id="@+id/textViewExistingUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
-        android:text="Already have an account?"
-        android:textColor="@color/colorWhite"
+    <Button
+        android:id="@+id/buttonAppBack"
+        android:layout_width="165dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/btn_bg"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonBookAppointment"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/buttonBookAppointment" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextAppNumber"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/editTextAppNumber"
+        app:layout_constraintTop_toBottomOf="@+id/buttonBookAppointment" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
