--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewCartTItle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="504dp"
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartTItle" />
 
     <EditText
         android:id="@+id/editTextAppNumber"
@@ -76,13 +76,13 @@
         android:paddingBottom="10dp"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/buttonBookAppointment"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOrderCart"
         app:layout_constraintEnd_toEndOf="@+id/editTextAppFullName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextAppFullName" />
 
     <Button
-        android:id="@+id/buttonBookAppointment"
+        android:id="@+id/buttonOrderCart"
         android:layout_width="153dp"
         android:layout_height="54dp"
         android:layout_marginBottom="28dp"
@@ -101,7 +101,7 @@
         android:text="Register for new account"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonBookAppointment"
+        app:layout_constraintEnd_toEndOf="@+id/buttonOrderCart"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/buttonBookAppointment" />
+        app:layout_constraintStart_toStartOf="@+id/buttonOrderCart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
