--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -24,7 +24,7 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewCartTItle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="560dp"
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextRegUsername"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextRegUsername"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartTItle" />
 
     <EditText
         android:id="@+id/editTextAppAddress"
@@ -122,7 +122,7 @@
         android:paddingBottom="10dp"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/buttonBookAppointment"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOrderCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAppNumber"
@@ -152,7 +152,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName" />
 
     <Button
-        android:id="@+id/buttonBookAppointment"
+        android:id="@+id/buttonOrderCart"
         android:layout_width="153dp"
         android:layout_height="54dp"
         android:layout_marginBottom="8dp"
@@ -171,7 +171,7 @@
         android:text="Already have an account?"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonBookAppointment"
+        app:layout_constraintEnd_toEndOf="@+id/buttonOrderCart"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/buttonBookAppointment" />
+        app:layout_constraintStart_toStartOf="@+id/buttonOrderCart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
