--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="24/7 Health Care"
+        android:text="HealthMate"
         android:textColor="@color/purple_200"
         android:textSize="34sp"
         android:textStyle="bold"
