--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HealthMate"
+        android:textAlignment="center"
         android:textColor="@color/purple_200"
         android:textSize="34sp"
         android:textStyle="bold"
